add part2 and part3 to each scene outline

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
         </div>
 
-        <div id="Android1" class="zoomTarget shape shape-rotation-left level2 scene-container">
+        <div id="Android1" class="zoomTarget level2 scene-container">
           <div id="Android1part1">
             <img src="images/Miranda/Scene_One_A.png" class="illustration" alt="cabin">
             <div class="text">
@@ -73,7 +73,7 @@
 
         </div>
 
-        <div id="Biologist1" class="zoomTarget shape shape-rotation-left level2 scene-container">
+        <div id="Biologist1" class="zoomTarget level2 scene-container">
           <div id="Biologist1Part1">
             <img src="images/Chamoun/Scene_One_A.png" class="illustration" alt="cabin">
             <div class="text">
@@ -106,7 +106,7 @@
 
         </div>
 
-        <div id="Pastor1" class="zoomTarget shape shape-rotation-left level2 scene-container">
+        <div id="Pastor1" class="zoomTarget level2 scene-container">
           <div id="Pastor1Part1">
             <img src="images/Ali/Scene_One_A.png" class="illustration" alt="Pastor">
             <div class="text">
@@ -142,7 +142,7 @@
       </div>
       <div id="Chapter2" class="zoomTarget level1">
 
-        <div id="Biologist2" class="zoomTarget shape shape-rotation-right level2 scene-container">
+        <div id="Biologist2" class="zoomTarget level2 scene-container">
           <div id="Biologist2Part1">
             <img src="images/Chamoun/Scene_Two_A.png" class="illustration" alt="Chamoun">
             <div class="text">
@@ -193,7 +193,7 @@
 
         </div>
 
-        <div id="Android2" class="zoomTarget shape shape-rotation-right level2 scene-container">
+        <div id="Android2" class="zoomTarget level2 scene-container">
           <div id="Android2Part1">
             <img src="images/Miranda/Scene_Two_A.png" class="illustration" alt="Chamoun">
             <div class="text">
@@ -216,7 +216,7 @@
           </div>
         </div>
 
-        <div id="Pastor2" class="zoomTarget shape shape-rotation-right level2 scene-container">
+        <div id="Pastor2" class="zoomTarget level2 scene-container">
           <div id="Pastor2Part1">
             <img src="images/Ali/Scene_Two_A.png" class="illustration" alt="Ali">
             <div class="text">
@@ -348,7 +348,25 @@
             <img src="images/Miranda/Scene_Four_A.png" class="illustration" alt="Miranda">
             <div class="text">
               <p>
-                Android4
+                Android4Part1
+              </p>
+            </div>
+          </div>
+
+          <div id="Android4Part2">
+            <img src="images/Miranda/Scene_Four_B.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android4Part2
+              </p>
+            </div>
+          </div>
+
+          <div id="Android4Part3">
+            <img src="images/Miranda/Scene_Four_C.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android4Part3
               </p>
               <go-to location="#Android5" >
                 <img src="images/nextButton.png" alt="next" >
@@ -363,7 +381,16 @@
             <img src="images/Miranda/Scene_Five_A.png" class="illustration" alt="Miranda">
             <div class="text">
               <p>
-                Android5
+                Android5Part1
+              </p>
+            </div>
+          </div>
+
+          <div id="Android5Part2">
+            <img src="images/Miranda/Scene_Five_B.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android5Part2
               </p>
               <go-to location="#Android6" >
                 <img src="images/nextButton.png" alt="next" >
@@ -377,7 +404,16 @@
             <img src="images/Miranda/Scene_Six_A.png" class="illustration" alt="Miranda">
             <div class="text">
               <p>
-                Android6
+                Android6Part1
+              </p>
+            </div>
+          </div>
+
+          <div id="Android6Part2">
+            <img src="images/Miranda/Scene_Six_B.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android6Part2
               </p>
               <go-to location="#credits" >
                 <img src="images/nextButton.png" alt="next" >
@@ -396,7 +432,15 @@
             <img src="images/Chamoun/Scene_Four_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist4
+                Biologist4Part1
+              </p>
+            </div>
+          </div>
+          <div id="Biologist4Part2">
+            <img src="images/Chamoun/Scene_Four_B.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist4Part2
               </p>
               <go-to location="#Biologist5" >
                 <img src="images/nextButton.png" alt="next" >
@@ -411,7 +455,23 @@
             <img src="images/Chamoun/Scene_Five_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist5
+                Biologist5Part1
+              </p>
+            </div>
+          </div>
+          <div id="Biologist5Part2">
+            <img src="images/Chamoun/Scene_Five_B.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist5Part2
+              </p>
+            </div>
+          </div>
+          <div id="Biologist5Part3">
+            <img src="images/Chamoun/Scene_Five_C.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist5Part3
               </p>
               <go-to location="#Biologist6" >
                 <img src="images/nextButton.png" alt="next" >
@@ -425,7 +485,16 @@
             <img src="images/Chamoun/Scene_Six_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist6
+                Biologist6Part1
+              </p>
+            </div>
+          </div>
+
+          <div id="Biologist6Part2">
+            <img src="images/Chamoun/Scene_Six_B.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist6Part2
               </p>
               <go-to location="#credits" >
                 <img src="images/nextButton.png" alt="next" >
@@ -434,10 +503,7 @@
           </div>
         </div>
 
-
-
       </div>
-
 
       <div id="PastorEnding" class="zoomTarget level1">
 
@@ -446,7 +512,25 @@
             <img src="images/Ali/Scene_Four_A.png" class="illustration" alt="Ali">
             <div class="text">
               <p>
-                Pastor4
+                Pastor4Part1
+              </p>
+            </div>
+          </div>
+
+          <div id="Pastor4Part2">
+            <img src="images/Ali/Scene_Four_B.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor4Part2
+              </p>
+            </div>
+          </div>
+
+          <div id="Pastor4Part3">
+            <img src="images/Ali/Scene_Four_C.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor4Part3
               </p>
               <go-to location="#Pastor5" >
                 <img src="images/nextButton.png" alt="next" >
@@ -461,7 +545,25 @@
             <img src="images/Ali/Scene_Five_A.png" class="illustration" alt="Ali">
             <div class="text">
               <p>
-                Pastor5
+                Pastor5Part1
+              </p>
+            </div>
+          </div>
+
+          <div id="Pastor5Part2">
+            <img src="images/Ali/Scene_Five_B.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor5Part2
+              </p>
+            </div>
+          </div>
+
+          <div id="Pastor5Part3">
+            <img src="images/Ali/Scene_Five_C.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor5Part3
               </p>
               <go-to location="#Pastor6" >
                 <img src="images/nextButton.png" alt="next" >
