fill the text for the Dr's Ending

--- a/index.html
+++ b/index.html
@@ -332,11 +332,7 @@
           </div>
         </div>
 
-
       </div>
-
-
-
 
 
 
@@ -432,7 +428,7 @@
             <img src="images/Chamoun/Scene_Four_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist4Part1
+                A few days after movie night you ask Dr Chamoun if she would walk with you around the colony. Along the way you spot some plants that seem to be dying. She notices your interest and explains. “As far as we can tell it's normal for the particular species to suddenly sicken and die. The rapid aging seems to allow the plant to better adapt to environmental changes.” She ends with “And so we are all connected in the great Circle of Life.” You suspect a movie reference.
               </p>
             </div>
           </div>
@@ -440,7 +436,7 @@
             <img src="images/Chamoun/Scene_Four_B.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist4Part2
+                Later that night you do a bit of research and find that your hunch was correct. The quote appears to be from an old animation titled The Lion King. Unfortunately the techs who put together the cultural database for your colony decided to omit it and you have to make do with a wiki article.
               </p>
               <go-to location="#Biologist5" >
                 <img src="images/nextButton.png" alt="next" >
@@ -455,7 +451,11 @@
             <img src="images/Chamoun/Scene_Five_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist5Part1
+                Dr Chamoun Scene Five
+              <p></p>
+                Dr: The tomato crop in the greenhouse is ready for harvesting. Want to skip the common room meal and make fresh salads instead?
+              <p></p>
+                Of course you do! You head over to the greenhouse with your new best friend and get with the tomato picking and salad making. While chopping tomatoes you let slip that you where researching the Lion King the other night.
               </p>
             </div>
           </div>
@@ -463,19 +463,12 @@
             <img src="images/Chamoun/Scene_Five_B.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist5Part2
+                Dr: That's one of my favorites. When I was young when ever we went to visit my aunt she would let us watch an old cartoon from her collection. I was always pestering my parents to visit aunt Nicole. We should watch it some time!
+              <p></p>
+                You: It didn't make the colony archive.
+              <p></p>
+                Dr: Oh...
               </p>
-            </div>
-          </div>
-          <div id="Biologist5Part3">
-            <img src="images/Chamoun/Scene_Five_C.png" class="illustration" alt="Chamoun">
-            <div class="text">
-              <p>
-                Biologist5Part3
-              </p>
-              <go-to location="#Biologist6" >
-                <img src="images/nextButton.png" alt="next" >
-              </go-to>
             </div>
           </div>
         </div>
@@ -485,7 +478,7 @@
             <img src="images/Chamoun/Scene_Six_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist6Part1
+                Data transfer over the instantaneous communications array is rationed but you burn this months quota on a quality copy of the Lion King. As soon as the download completes you call Dr Chamoun and ask her to come to your quarters.
               </p>
             </div>
           </div>
@@ -494,7 +487,9 @@
             <img src="images/Chamoun/Scene_Six_B.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                Biologist6Part2
+                Dr: Louis I think this is the beginning of a beautiful friendship.
+              <p></p>
+                Your name isn't Louie so...
               </p>
               <go-to location="#credits" >
                 <img src="images/nextButton.png" alt="next" >
@@ -587,6 +582,7 @@
         </div>
 
       </div>
+
 
 
       <div id="OtherScreens" class="zoomTarget level1">
