add link to Biologist6

--- a/index.html
+++ b/index.html
@@ -469,6 +469,9 @@
               <p></p>
                 Dr: Oh...
               </p>
+              <go-to location="#Biologist6" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
             </div>
           </div>
         </div>
