--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             <img src="images/Chamoun/Scene_Four_A.png" class="illustration" alt="Chamoun">
             <div class="text">
               <p>
-                A few days after movie night you ask Dr Chamoun if she would walk with you around the colony. Along the way you spot some plants that seem to be dying. She notices your interest and explains. “As far as we can tell it's normal for the particular species to suddenly sicken and die. The rapid aging seems to allow the plant to better adapt to environmental changes.” She ends with “And so we are all connected in the great Circle of Life.” You suspect a movie reference.
+                A few days after movie night you ask Dr Chamoun if she would walk with you around the colony. Along the way you spot some plants that seem to be dying. She notices your interest and explains. "As far as we can tell it's normal for the particular species to suddenly sicken and die. The rapid aging seems to allow the plant to better adapt to environmental changes." She ends with "And so we are all connected in the great Circle of Life." You suspect a movie reference.
               </p>
             </div>
           </div>
