reset scenes when game ends

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="images/bgs/cabin.png" class="illustration" alt="cool picture">
             <div class="text">
               <p>
-              As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. Boundless opportunity and a place in history are with in your reach as you work side by side with your fellow colonists. I envy you a bright future on the colony world XB-137, surely in no time at all...
+              As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. Boundless opportunity and a place in history are within your reach as you work side by side with your fellow colonists. I envy you a bright future on the colony world XB-137, surely in no time at all...
               </p>
             </div>
           </div>
@@ -60,7 +60,7 @@
             <img src="images/Miranda/Scene_One_B.png" class="illustration" alt="cabin">
             <div class="text">
               <p>
-                TB: Its perfectly normal to flounder around at during these things. Particularly with a non-human, I'm shore we'll be chums before long.  I'll tell you what, why don't we push this appointment off until tomorrow afternoon. Sea you then!
+                TB: Its perfectly normal to flounder around during these things. Particularly with a non-human, I'm shore we'll be chums before long.  I'll tell you what, why don't we push this appointment off until tomorrow afternoon. Sea you then!
               </p>
               <p>
                 Looks like you're schedule has been re-arranged for you. Hopefully the biologist won't mind if you start with her.
@@ -609,7 +609,7 @@
                 Ubuntu font license at http://font.ubuntu.com/licence/.
 
               </p>
-              <go-to location="#fullScreen" >
+              <go-to location="#fullScreen" id="end" >
                 <img src="images/nextButton.png" alt="next" >
               </go-to>
             </div>
