--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <img src="images/bgs/cabin.png" class="illustration" alt="cabin">
             <div class="text">
               <p>
-              Ugh, official messages from the central worlds can be so overwrought; do they expect anyone to actually read them?  You are too busy for this nonsense, you have a mandatory session with the Health and Wellness Android today and you have profiles on the Colony Biologist and Pastor to get started on.
+              Ugh, official messages from the central worlds can be so overwrought. Do they really expect anyone to actually read them?  
+			  
+			  You close the memo and head to your mandatory check in session with the Health and Wellness Android.
               </p>
 
               <go-to location="#Android1" >
