--- a/index.html
+++ b/index.html
@@ -356,11 +356,11 @@
               <p>
                 Who will you go see this evening:
               </p>
-              <go-to location="#Biologist3"> Dr Chamoun for Movie night </go-to>
+              <go-to-choice location="#Biologist3"> Dr Chamoun for Movie night </go-to-choice>
               <br/>
-              <go-to location="#Android3"> Miranda and Baby Fish </go-to>
+              <go-to-choice location="#Android3"> Miranda and Baby Fish </go-to-choice>
               <br/>
-              <go-to location="#Pastor3"> Ali's Secret </go-to>
+              <go-to-choice location="#Pastor3"> Ali's Secret </go-to-choice>
             </div>
           </div>
 
