Added Title and Subtitle

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <script type="text/javascript" src="scripts/story-scene.js"></script>
 
   </head>
+  
   <body class="zoomContainer">
     <div id="fullScreen" class="zoomTarget level0">
+	
+	<h1> F.R.I.E.N.D.S of XB-137</h1>
+	<h2> [Rather Lengthy Subtitle goes here...] </h2>
+	
       <div id="Chapter1" class="zoomTarget level1">
         <div id="Intro" class="zoomTarget level2 scene-container">
           <div id="IntroPart1">
