Add Ubuntu Font back in

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>LudumDare</title>
 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:light&subset=Latin">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
@@ -26,7 +26,7 @@
             <img src="images/bgs/cabin.png" class="illustration" alt="cool picture">
             <div class="text">
               <p>
-              ...
+              As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. 
               </p>
             </div>
           </div>
@@ -35,17 +35,29 @@
             <img src="images/bgs/cabin.png" class="illustration" alt="cool picture">
             <div class="text">
               <p>
-              As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. Boundless opportunity and a place in history are within your reach as you work side by side with your fellow colonists. I envy you a bright future on the colony world XB-137, surely in no time at all...
+              Boundless opportunity and a place in history are within your reach as you work side by side with your fellow colonists. 
+			   </p>
+			  <p>
+			  I envy you a bright future on the colony world XB-137, surely in no time at all...
               </p>
             </div>
           </div>
-
-          <div id="IntroPart3">
-            <img src="images/bgs/cabin.png" class="illustration" alt="cabin">
+		  
+		  <div id="IntroPart3">
+            <img src="images/bgs/cabin.png" class="illustration" alt="cool picture">
             <div class="text">
               <p>
-              Ugh, official messages from the central worlds can be so overwrought. Do they really expect anyone to actually read them?
+              Ugh, official messages from the central worlds can be so overwrought. 
 			  </p>
+			  <p>
+			  Do they really expect anyone to actually read them?
+			  </p>
+            </div>
+		</div>
+
+          <div id="IntroPart4">
+            <img src="images/bgs/cabin.png" class="illustration" alt="cabin">
+            <div class="text">
 			  <p>
 			  You close the memo and head to your mandatory check in session with the Health and Wellness Android.
               </p>
@@ -357,18 +369,28 @@
 
           <div id="TheChoicePart5">
             <img src="images/bgs/cabin.png" class="illustration" alt="Chamoun">
-            <div class="text">
+			<div class="text">
               <p>
                 Who will you go see this evening:
-              </p>
-              <go-to location="#Biologist3"> Dr Chamoun for Movie night </go-to>
-              <br/>
-              <go-to location="#Android3"> Miranda and Baby Fish </go-to>
-              <br/>
-              <go-to location="#Pastor3"> Ali's Secret </go-to>
+			  </br>
+			  </br>
+			  <go-to location="#Biologist3"> 
+				Dr. Chamoun for Movie Night
+			  </go-to>
+			  </br>
+			  <br/>
+			  <go-to location="#Android3"> 
+				Miranda and Baby Fish
+			  </go-to>
+			  </br>
+			  <br/>
+			  <go-to location="#Pastor3"> 
+				Discover ALi's Secret
+			  </go-to>
+				
+              </p> 
             </div>
           </div>
-
         </div>
 
         <div id="Biologist3" class="zoomTarget level2 scene-container">
